--- a/style.css
+++ b/style.css
@@ -2,41 +2,39 @@ body {
   background-image: url(./background_image.jpg);
   color: white;
   background-size: cover;
-
 }
 #container {
-  background-color: rgba(0, 0, 0, 0.453);
+  background-color: rgba(216, 202, 202, 0.453);
   width: 100%;
 }
-#title {
+#first-div {
+    text-align: center;
+}
+#title, span {
+  margin-bottom: 0px;
   font-size: 80px;
   text-transform: uppercase;
-  margin-bottom: 20px;
   font-family: "Modak", cursive;
   font-weight: 500;
   letter-spacing: 5px;
-  line-height: 30px;
-}
-#first-div {
-  text-align: center;
 }
 span {
   color: rgb(240, 42, 28);
 }
 #description {
+    margin-top: 0px;
   text-transform: capitalize;
   font-weight: 150;
   font-size: 24px;
 }
-
 #survey-form {
   width: 500px;
-  height: 750px;
+  height: 100%;
   margin: 0px auto;
   background-color: rgba(0, 0, 0, 0.472);
   font-size: 1.1rem;
 }
-form {
+#survey-form form {
   width: 500px;
   height: 750px;
 }
@@ -46,18 +44,31 @@ form {
 #content-type {
   display: block;
   margin-top: 10px;
-  width: 300px;
-  height: 35px;
+  width: 400px;
+  height: 38px;
 }
 .box {
-  margin: 20px auto;
+    display: inline-block;
+    margin: 10px 25px;
+    padding-top: 5px;
 }
-p {
-  margin-bottom: 10px;
+.labels{
+    margin: 4px auto;
 }
+.checkbox, .radio{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
+}
+.box p{
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
 textarea {
-  width: 300px;
+  width: 350px;
   height: 100px;
+  resize: none;
 }
 
 .button {
@@ -70,5 +81,5 @@ textarea {
     width: 140px;
     color: white;
     background-color: rgb(230, 11, 11);
-    border-radius: 30px; 
+    border-radius: 30px;
 }
